# cobrinha-basico-rs

./: Cargo.toml  README.md  build.rs  resource.rc
assets/: drama.mid  drama2.mid  got.mid  got2.mid
src/: main.rs
